--- a/styles/legal-solution.css
+++ b/styles/legal-solution.css
@@ -7,6 +7,13 @@
 .eb_garamond_font {
   font-family: "EB Garamond", serif;
 }
+/* responsive check */
+/* * {
+  border: 4px solid red;
+}
+body {
+  border: 3px dashed blue;
+} */
 
 /* shared styles */
 .container {
@@ -25,8 +32,16 @@
   border-radius: 8px;
   border: none;
 }
-/*  */
-header {
+.description {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #e7e7e7;
+  margin-bottom: 32px;
+}
+/*   shared styles ends here*/
+
+header,
+#banner {
   margin-top: 60px;
 }
 
@@ -51,4 +66,50 @@ header {
   position: relative;
   top: 3px;
   left: 7px;
+}
+
+/* banner design */
+#banner {
+  background: url("../assets/images/banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 200px;
+  border-radius: 10px;
+}
+#banner_content {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#banner_heading {
+  font-size: 3.75rem;
+  font-weight: 800;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+#banner_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+#banner_form input[type="email"] {
+  width: 500px;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 26px;
+  padding: 19px;
+  border-radius: 8px;
+  border: none;
+}
+#banner_form input[type="submit"] {
+  padding: 18px 39px;
+  background-color: #b68c5a;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #ffffff;
+  border-radius: 8px;
+  border: none;
 }
